[package]
name = "philiprehberger-color"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Color manipulation library — parsing, conversion, blending, contrast checking, and ANSI terminal output"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-color"
keywords = ["color", "rgb", "hsl", "hex", "terminal"]
categories = ["value-formatting", "command-line-interface"]
